# MiniChat

./: .gitignore  CMakeLists.txt  README.md  README.txt
MiniChatClient/: CMakeLists.txt
MiniChatClient/Header/: Client.h
MiniChatClient/Source/: Client.cpp  main.cpp
MiniChatServer/: CMakeLists.txt
MiniChatServer/Header/: Server.h
MiniChatServer/Source/: Server.cpp  main.cpp
NetworkLibrary/: CMakeLists.txt
NetworkLibrary/Private/: ErrorHandling.hpp  Platform.h  PrivateNetwork.h
NetworkLibrary/Public/: pch.h
NetworkLibrary/Public/Network/: Network.h
NetworkLibrary/Source/: Network.cpp  Socket.cpp
